# jmedia

./: .gitignore  CMakeLists.txt  JMediaDecoder.cpp  JMediaDecoder.h  JMediaReader.cpp  JMediaReader.h  LICENSE  LibAVDecoder.cpp  LibAVDecoder.h  LibAVInputFileAudio.cpp  LibAVInputFileAudio.h  LibAVOutputFileAudio.cpp  LibAVOutputFileAudio.h  README.md  TransCodeAAC.cpp  TransCodeAAC.h  decode_audio.c.cpp  jmedia.files  main.cpp  remuxing.cpp
doc/examples/: CMakeLists.txt  decode_media.cpp  example_muxer.cpp  hw_decode_scale.cpp  read_metadata.cpp  scale_video.cpp  video_in_video.cpp  watermark.cpp  watermask.cpp
jmedia/: AudioReader.cpp  AudioReader.h  Decoder.cpp  Decoder.h  Error.h  FormatReader.cpp  FormatReader.h  FormatWriter.cpp  FormatWriter.h  Reader.cpp  Reader.h  base.h
jmedia/Filter/: FilterConfig.cpp  FilterConfig.h  FilterConfig_abuffer.cpp  FilterConfig_abuffer.h  FilterConfig_abuffersink.cpp  FilterConfig_abuffersink.h  FilterConfig_aformat.cpp  FilterConfig_aformat.h  FilterGraph.cpp  FilterGraph.h
jmedia/codec/: decoder.cpp  decoder.h  encoder.cpp  encoder.h
jmedia/filter/: filter.cpp  filter.h  filter_abuffer.cpp  filter_abuffer.h  filter_abuffersink.cpp  filter_abuffersink.h  filter_buffer.cpp  filter_buffer.h  filter_buffersink.cpp  filter_buffersink.h  filter_graph.cpp  filter_graph.h  filter_graph_n.cpp  filter_graph_n.h
jmedia/filter/video/: filter_ascii_chan.cpp  filter_ascii_chan.h  filter_ascii_crop.cpp  filter_ascii_drawbox.cpp  filter_ascii_drawtext.cpp  filter_ascii_format.cpp  filter_ascii_graph.cpp  filter_ascii_graph.h  filter_ascii_hwmap.cpp  filter_ascii_movie.cpp  filter_ascii_overlay.cpp  filter_ascii_scale.cpp  filter_ascii_scale_qsv.cpp
jmedia/format/: format_reader.cpp  format_reader.h  format_writer.cpp  format_writer.h  reader.h
jmedia/resampler/: resampler.cpp  resampler.h
jmedia/scaler/: scaler.cpp  scaler.h
jmedia/tools/: Resample.cpp  Resample.h  Resampler.cpp  Resampler.h  Scaler.cpp  Scaler.h
jmedia/util/: util.h
jmedia/writer/: writer.cpp  writer.h
test/: CMakeLists.txt  filter_buffer_test.cpp  reader_test.cpp  video_filter_ascii_test.cpp  video_filter_chan.cpp
